add integration tests for Wrapper DSL defaultJvmOpts